Header implemented. NO VueJs

--- a/index.html
+++ b/index.html
@@ -4,10 +4,52 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="dist/styles.css" />
     <title>AvadaSEO</title>
   </head>
   <body>
+    <div class="app">
+      <header>
+        <div class="container">
+          <nav>
+            <div class="header">
+              <img src="images/logo_seo_w_1x.png" alt="AvadaSEO logo" />
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Who We Are</a></li>
+                <li><a href="#">What We Do</a></li>
+                <li><a href="#">Where We Work</a></li>
+                <li>
+                  <a href="#">Carrers <span>Apply</span></a>
+                </li>
+                <li><a href="#">News</a></li>
+                <li><button>Get in touch now</button></li>
+              </ul>
+            </div>
+          </nav>
+          <section class="campaigns">
+            <div>
+              <h1>SEM Campaigns Made Simple With Avada</h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elite.
+                Phasellus eu ornare erat. Curabitur pulvinar elit.
+              </p>
+              <button>Buy avada now</button>
+              <button>Contact us</button>
+            </div>
+          </section>
+        </div>
+      </header>
+      <main></main>
+      <footer></footer>
+    </div>
     <script src="scripts/app.js"></script>
   </body>
 </html>
