Template, services, work sections implemented

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="dist/styles.css" />
     <title>AvadaSEO</title>
   </head>
@@ -30,7 +36,7 @@
                   <a href="#">Carrers <span>Apply</span></a>
                 </li>
                 <li><a href="#">News</a></li>
-                <li><button>Get in touch now</button></li>
+                <li><button class="button">Get in touch now</button></li>
               </ul>
             </div>
           </nav>
@@ -41,13 +47,141 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elite.
                 Phasellus eu ornare erat. Curabitur pulvinar elit.
               </p>
-              <button>Buy avada now</button>
-              <button>Contact us</button>
+              <button class="button">Buy avada now</button>
+              <button class="button">Contact us</button>
             </div>
           </section>
         </div>
       </header>
-      <main></main>
+      <main>
+        <section class="template">
+          <div class="container">
+            <div class="wrapper-text">
+              <div>
+                <h1>Meet The New Agency SEO Template From The Avada Team</h1>
+                <p>
+                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                  accusatium doloremque laudantium.
+                </p>
+              </div>
+            </div>
+            <div class="wrapper-panels">
+              <div>
+                <i class="fas fa-road"></i>
+                <h3>Establish Goals</h3>
+                <p>
+                  Aliquam not elit lacus. Praesent aliquet, ipsum id scelerisque
+                  convallis, mi ligula euismod odio, vel dictum mi risus a mi.
+                </p>
+              </div>
+              <div>
+                <i class="fas fa-video"></i>
+                <h3>Work With a Team</h3>
+                <p>
+                  Cras semper auctor aliquam. Sed porta sed lacus sit amet
+                  consectetur. Lorem ipsum dolor sit amet, consectetur
+                  adipiscin.
+                </p>
+              </div>
+              <div>
+                <i class="fas fa-tint"></i>
+                <h3>Get Results</h3>
+                <p>
+                  Vestibulum scelerisque egestas lectus sit amet molestie. Donec
+                  consectetur cursus est sed blandit. Nunc sed risus lacus.
+                </p>
+              </div>
+            </div>
+          </div>
+          <img
+            src="images/agency-seo-desk-front-1200x570.jpg"
+            alt="Desk image"
+          />
+        </section>
+        <section class="services">
+          <div class="container">
+            <div class="wrapper-text">
+              <div>
+                <h1>See Our Top Notch Services</h1>
+                <p>
+                  Sed ut perspiciatis omnis iste natus error sit voluptatem
+                  accusantium doloremque laudantium.
+                </p>
+              </div>
+            </div>
+            <div class="wrapper-panels">
+              <div>
+                <i class="fab fa-google"></i>
+                <h3>Google SEO</h3>
+                <p>
+                  Vestibulum in lacinia metus. Suspendisse in enim ipsum. Nulla
+                  facilisi. Donec ante turpis, dictum sed magna et, dabipus
+                  faucibus odio.
+                </p>
+                <a href="#">Read More ></a>
+              </div>
+              <div>
+                <i class="fas fa-cog"></i>
+                <h3>Brand Strategy</h3>
+                <p>
+                  Vestibulum in lacinia metus. Suspendisse in enim ipsum. Nulla
+                  facilisi. Donec ante turpis, dictum sed magna et, dabipus
+                  faucibus odio.
+                </p>
+                <a href="#">Read More ></a>
+              </div>
+              <div>
+                <i class="fas fa-building"></i>
+                <h3>Local SEO</h3>
+                <p>
+                  Vestibulum in lacinia metus. Suspendisse in enim ipsum. Nulla
+                  facilisi. Donec ante turpis, dictum sed magna et, dabipus
+                  faucibus odio.
+                </p>
+                <a href="#">Read More ></a>
+              </div>
+              <div>
+                <i class="far fa-chart-bar"></i>
+                <h3>SEO Analysis</h3>
+                <p>
+                  Vestibulum in lacinia metus. Suspendisse in enim ipsum. Nulla
+                  facilisi. Donec ante turpis, dictum sed magna et, dabipus
+                  faucibus odio.
+                </p>
+                <a href="#">Read More ></a>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="work">
+          <div class="container">
+            <div class="wrapper-text">
+              <div>
+                <h1>Our Work</h1>
+                <p>
+                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                  accusantium doloremque laudantium.
+                </p>
+              </div>
+            </div>
+            <div class="wrapper-image">
+              <div>
+                <img src="images/case-study-gallery-3-1-400x300.jpg" alt="" />
+                <img src="images/case-study-gallery-4-1-400x300.jpg" alt="" />
+              </div>
+              <div>
+                <img src="images/case-study-gallery-2-400x300.jpg" alt="" />
+                <img src="images/case-study-gallery-5-1-400x300.jpg" alt="" />
+              </div>
+              <div>
+                <img src="images/case-study-gallery-1-1-400x300.jpg" alt="" />
+                <img src="images/case-study-gallery-6-1-400x300.jpg" alt="" />
+              </div>
+            </div>
+            <button class="button">View our work</button>
+          </div>
+        </section>
+      </main>
       <footer></footer>
     </div>
     <script src="scripts/app.js"></script>
