Plans, news, client, consulation section impl.

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             alt="Desk image"
           />
         </section>
+
         <section class="services">
           <div class="container">
             <div class="wrapper-text">
@@ -153,6 +154,7 @@
             </div>
           </div>
         </section>
+
         <section class="work">
           <div class="container">
             <div class="wrapper-text">
@@ -179,6 +181,184 @@
               </div>
             </div>
             <button class="button">View our work</button>
+          </div>
+        </section>
+
+        <section class="plans">
+          <div class="container">
+            <div class="wrapper-text">
+              <div>
+                <h1>Our Plans</h1>
+                <p>
+                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                  accusantium doloremque laudantium.
+                </p>
+              </div>
+            </div>
+            <div class="wrapper-panels">
+              <div>
+                <h1>Standard</h1>
+                <div class="money">
+                  <span class="dollar">$</span>
+                  <span class="int">19</span>
+                  <span class="decimal">99</span>
+                  <span class="time">monthly</span>
+                </div>
+                <p>5 Projects</p>
+                <p>5 GB Storage</p>
+                <p>Unlimited Users</p>
+                <button class="button">Start Today</button>
+              </div>
+              <div>
+                <h1>Premium</h1>
+                <div class="money">
+                  <span class="dollar">$</span>
+                  <span class="int">29</span>
+                  <span class="decimal">99</span>
+                  <span class="time">monthly</span>
+                </div>
+                <p>10 Projects</p>
+                <p>15 GB Storage</p>
+                <p>Unlimited Users</p>
+                <button class="button">Start Today</button>
+              </div>
+              <div>
+                <h1>Professional</h1>
+                <div class="money">
+                  <span class="dollar">$</span>
+                  <span class="int">39</span>
+                  <span class="decimal">99</span>
+                  <span class="time">monthly</span>
+                </div>
+                <p>15 Projects</p>
+                <p>30 GB Storage</p>
+                <p>Unlimited Users</p>
+                <button class="button">Start Today</button>
+              </div>
+              <div>
+                <h1>Extreme</h1>
+                <div class="money">
+                  <span class="dollar">$</span>
+                  <span class="int">59</span>
+                  <span class="decimal">99</span>
+                  <span class="time">monthly</span>
+                </div>
+                <p>Unlimited Projects</p>
+                <p>Unlimited Storage</p>
+                <p>Unlimited Users</p>
+                <button class="button">Start Today</button>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="news">
+          <div class="container">
+            <div class="wrapper-text">
+              <div>
+                <h1>Our News</h1>
+                <p>
+                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                  accusantium doloremque laudantium.
+                </p>
+                <p></p>
+              </div>
+            </div>
+            <div class="wrapper-news">
+              <div>
+                <img src="images/related-service-2-320x202.jpg" alt="" />
+                <h3>Why You Need A SEO Agency Now</h3>
+                <p>November 1st, 2017</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et
+                  scelerisque sem. Nunc molestie neque augue, at gravida mi
+                  blandit
+                </p>
+              </div>
+              <div>
+                <img src="images/related-service-4-320x202.jpg" alt="" />
+                <h3>SEO Tips For Your Startup</h3>
+                <p>November 1st, 2017</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et
+                  scelerisque sem. Nunc molestie neque augue, at gravida mi
+                  blandit
+                </p>
+              </div>
+              <div>
+                <img src="images/blog-post-6-320x202.jpg" alt="" />
+                <h3>Image Optimiziation For Your Site</h3>
+                <p>November 1st, 2017</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et
+                  scelerisque sem. Nunc molestie neque augue, at gravida mi
+                  blandit
+                </p>
+              </div>
+            </div>
+            <button class="button">Go to news</button>
+          </div>
+        </section>
+
+        <section class="clients">
+          <div class="container">
+            <div class="wrapper-clients">
+              <div>
+                <h1>What Our Clients Say</h1>
+                <img src="images/testimonials-2.jpg" alt="Testimonial image" />
+                <p>
+                  Ability proceeds from a fusion of skills, knowledge,
+                  understanding and imagination, consolidated by experience.
+                </p>
+                <p>Luis Desalvo, <span> CREO TECH</span></p>
+                <i class="fas fa-circle"></i>
+                <i class="far fa-circle"></i>
+              </div>
+            </div>
+            <div class="hr">
+              <div></div>
+            </div>
+            <div class="wrapper-logo">
+              <div>
+                <img
+                  src="images/clients_partner_5-200x202.png"
+                  alt="Avada logo"
+                />
+              </div>
+              <div>
+                <img
+                  src="images/clients_partner_6-200x202.png"
+                  alt="Avada logo"
+                />
+              </div>
+              <div>
+                <img
+                  src="images/clients_partner_1-200x202.png"
+                  alt="Avada logo"
+                />
+              </div>
+              <div>
+                <img
+                  src="images/clients_partner_2-200x202.png"
+                  alt="Avada logo"
+                />
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="consulation">
+          <div class="container">
+            <div class="wrapper-text">
+              <div>
+                <h1>Start Your Free Consulation</h1>
+                <p>
+                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                  accusantium doloremque laudantium
+                </p>
+                <button class="button">Contact us now</button>
+              </div>
+            </div>
           </div>
         </section>
       </main>
