--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           </section>
         </div>
       </header>
+
       <main>
         <section class="template">
           <div class="container">
@@ -362,7 +363,38 @@
           </div>
         </section>
       </main>
-      <footer></footer>
+
+      <footer>
+        <section class="footer">
+          <div class="container">
+            <div class="wrapper-footer">
+              <div>
+                <img src="images/logo_seo_1x.png" alt="SEO logo" />
+                <ul>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Who We Are</a></li>
+                  <li><a href="#">What We Do</a></li>
+                  <li><a href="#">Where We Work</a></li>
+                  <li><a href="#">Carrers</a></li>
+                  <li><a href="#">News</a></li>
+                  <li><a href="#">Get In Touch Now</a></li>
+                </ul>
+
+                <p>
+                  <i class="far fa-copyright"></i> Copyright 2012-2020 | Avada
+                  Team by <span>Theme Fusion</span> | All rights reserved |
+                  Powered by <span>WordPress</span>
+                </p>
+
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-youtube"></i>
+              </div>
+            </div>
+          </div>
+        </section>
+      </footer>
     </div>
     <script src="scripts/app.js"></script>
   </body>
