--- a/index.html
+++ b/index.html
@@ -18,24 +18,22 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="dist/styles.css" />
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <title>AvadaSEO</title>
   </head>
   <body>
-    <div class="app">
+    <div id="app">
       <header>
         <div class="container">
           <nav>
             <div class="header">
               <img src="images/logo_seo_w_1x.png" alt="AvadaSEO logo" />
               <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Who We Are</a></li>
-                <li><a href="#">What We Do</a></li>
-                <li><a href="#">Where We Work</a></li>
-                <li>
-                  <a href="#">Carrers <span>Apply</span></a>
+                <li v-for="link in headerlinks">
+                  <a href="#"
+                    >{{link.text}}<span v-if="link.span">{{link.span}}</span></a
+                  >
                 </li>
-                <li><a href="#">News</a></li>
                 <li><button class="button">Get in touch now</button></li>
               </ul>
             </div>
@@ -371,13 +369,9 @@
               <div>
                 <img src="images/logo_seo_1x.png" alt="SEO logo" />
                 <ul>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Who We Are</a></li>
-                  <li><a href="#">What We Do</a></li>
-                  <li><a href="#">Where We Work</a></li>
-                  <li><a href="#">Carrers</a></li>
-                  <li><a href="#">News</a></li>
-                  <li><a href="#">Get In Touch Now</a></li>
+                  <li v-for="link in footerlinks">
+                    <a href="#">{{link.text}}</a>
+                  </li>
                 </ul>
 
                 <p>
