--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@
               </div>
             </div>
           </div>
+          <a class="chevron" href="#"><i class="fas fa-chevron-up"></i></a>
         </section>
       </footer>
     </div>
