--- a/index.html
+++ b/index.html
@@ -166,17 +166,37 @@
               </div>
             </div>
             <div class="wrapper-image">
-              <div>
-                <img src="images/case-study-gallery-3-1-400x300.jpg" alt="" />
-                <img src="images/case-study-gallery-4-1-400x300.jpg" alt="" />
+              <div class="column-image">
+                <div>
+                  <img src="images/case-study-gallery-3-1-400x300.jpg" alt="" />
+                  <div class="hover"></div>
+                </div>
+                <div>
+                  <img src="images/case-study-gallery-4-1-400x300.jpg" alt="" />
+                  <div class="hover"></div>
+                </div>
               </div>
-              <div>
-                <img src="images/case-study-gallery-2-400x300.jpg" alt="" />
-                <img src="images/case-study-gallery-5-1-400x300.jpg" alt="" />
+
+              <div class="column-image">
+                <div>
+                  <img src="images/case-study-gallery-2-400x300.jpg" alt="" />
+                  <div class="hover"></div>
+                </div>
+                <div>
+                  <img src="images/case-study-gallery-5-1-400x300.jpg" alt="" />
+                  <div class="hover"></div>
+                </div>
               </div>
-              <div>
-                <img src="images/case-study-gallery-1-1-400x300.jpg" alt="" />
-                <img src="images/case-study-gallery-6-1-400x300.jpg" alt="" />
+
+              <div class="column-image">
+                <div>
+                  <img src="images/case-study-gallery-1-1-400x300.jpg" alt="" />
+                  <div class="hover"></div>
+                </div>
+                <div>
+                  <img src="images/case-study-gallery-6-1-400x300.jpg" alt="" />
+                  <div class="hover"></div>
+                </div>
               </div>
             </div>
             <button class="button">View our work</button>
